--- a/src/render/pages/login/index.less
+++ b/src/render/pages/login/index.less
@@ -29,7 +29,7 @@
     max-width: 200px;
     height: 100%;
     background-size: cover;
-    background-color: rgba(0,0,0,.14);
+    background-color: rgba(0, 0, 0, .14);
     font-size: 24px;
     font-weight: bold;
     letter-spacing: 4px;
@@ -56,7 +56,7 @@
   }
 
   .tab-item-box {
-    padding: 24px 34px 0;
+    padding: 14px 34px 0;
 
     .ant-input {
       border-radius: 3px;
@@ -83,9 +83,17 @@
   }
 
   .ant-tabs-tab {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 900;
     color: #999;
+  }
+
+  .ant-form-vertical .ant-form-item {
+    padding-bottom: 0;
+  }
+
+  .ant-form-explain {
+    font-size: 12px;
   }
 
 }
