--- a/src/render/layout/index.less
+++ b/src/render/layout/index.less
@@ -1,24 +1,13 @@
 .app-layout {
-  height: 100%;
 
-  .layout-sider {
-    color: #fff;
-
-    .logo {
-      height: var(--height-header);
-
-      span {
-        font-size: 24px;
-        color: #333;
-      }
-    }
+  .ant-layout-header {
+    height: var(--header-height);
+    background-color: #615b8a;
   }
 
-  .layout-header {
-    color: #fff;
+  aside {
+    background-color: #f5f5f5;
+    border-right: 1px solid #dadada;
   }
 
-  .layout-content {
-    overflow: auto;
-  }
 }
