--- a/src/render/pages/login/index.less
+++ b/src/render/pages/login/index.less
@@ -5,7 +5,15 @@
   align-items: center;
   justify-content: center;
   background-color: white;
-  -webkit-app-region: drag; // 不响应鼠标，就可以移动窗口了
+
+  .drap-top-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: calc(100% - 54px);
+    height: 34px;
+    -webkit-app-region: drag; // 不响应鼠标，就可以移动窗口了
+  }
 
   .ant-tabs-bar {
     border: none;
