fix sider style

--- a/src/render/global.less
+++ b/src/render/global.less
@@ -1,5 +1,5 @@
 /**
- * 全局样式
+ * global style
  */
 
 :root {
@@ -17,6 +17,14 @@
   --shadow-base: 0 0 7px -3px rgba(0, 0, 0, 0.33);
   --shadow-chunk: 0 4px 10px -4px rgba(0, 0, 0, 0.15);
   --shadow-header: 0px 2px 5px -3px #c1c1c1;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
 }
 
 #app {
