--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+button:focus{outline-color: transparent !important;}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -27,8 +29,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
 
 h1 {
@@ -66,11 +68,14 @@ code {
   padding: 2em;
 }
 
+button,input,textarea{outline: none;}
+
 #app {
-  max-width: 1280px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 @media (prefers-color-scheme: light) {
